# elsa

./: README.md  croissant.json  evaluate.py  inference.py  map_syn.py  mapping.py  pyproject.toml  requirements-dev.txt  run.sh
dataset/bing/: download_images.py  extract_rows.py  matched_rows.csv
dataset/google/: download_images.py  extract_rows.py  matched_rows.csv
examples/: _views.ipynb  basic.ipynb
gt_data/bing/: label_combo_freq.csv  label_ids.txt  label_per_box_sanity_checked.csv  label_per_box_sanity_checked_removed_unwanted_labels_unified_labels.csv  no_annotation_negative_images.csv
gt_data/google/: google_gt.csv  label_ids.txt  label_per_box_sanity_checked.csv  label_per_box_sanity_checked_removed_unwanted_labels_unified_labels.csv  no_annotation_negative_images.csv
gt_data/merged/: labelId_categoryType_dict.pickle  labelId_categoryType_dict_after_distr_thresholding.pickle  label_id_dict.pickle  label_id_dict_after_distr_thresholding.csv  label_id_dict_after_distr_thresholding.pickle  label_per_box_sanity_checked_removed_unwanted_labels_unified_labels.csv  label_per_box_sanity_checked_removed_unwanted_labels_unified_labels_after_distr_thresholding.csv  label_per_box_sanity_checked_removed_unwanted_labels_unified_labels_filtered_low_freqs.csv
src/elsa/: __init__.py  _prompts.py  boxes.py  files.py  images.py  invalid.py  isyns.py  labels.py  loader.py  meta.py  predict.py  predictions.py  predictv2.py  resource.py  root.py  strict.py  todo  util.py
src/magicpandas/: __init__.py
src/notebooks/: bing_sanity_check.ipynb  distribution_plots.ipynb  (+2 more)
(+130 files in other folders)
