[project]
name = "sirius"
version = "0.0.1"
description = "streamline pandas workflow"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = [
    "pandas"
]
authors = [
    { name = "Daniel Hodczak", email = "dhodcz2@uic.edu" },
]
maintainers = [
    { name = "Daniel Hodczak", email = "dhodcz2@uic.edu" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dynamic = ["dependencies"]


[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 42",
    "wheel",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements-dev.txt"] }

[tool.setuptools.packages.find]
where = ["src"]
include = ["magicpandas*", "sirius*"]

